--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		    <li><a href="http://www.esri.com/what-is-gis">What is GIS?</a></li>
 				<li><a href="https://opensource.com/resources/what-open-source">What is Open Source?</a></li>
 		    <li role="separator" class="divider"></li>
-		    <li><a href="#">Blog</a></li>
+		    <li><a href="devblog.html">Blog</a></li>
 				<li role="separator" class="divider"></li>
 				<li><a href="#">Source</a></li>
 				<li role="separator" class="divider"></li>
