--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		    <li role="separator" class="divider"></li>
 		    <li><a href="devblog.html">Blog</a></li>
 				<li role="separator" class="divider"></li>
-				<li><a href="#">Source</a></li>
+				<li><a href="https://github.com/TAMUCGIS/TAMUCGIS.github.io">Source</a></li>
 				<li role="separator" class="divider"></li>
 				<li><a href="#">Store</a></li>
 		  </ul>
