--- a/devblog.html
+++ b/devblog.html
@@ -131,5 +131,52 @@ Allow for a good amount of interoperatibility.
 We're not sure what the big project will be at this time, but we know for a certainty that everyone will have something to bring to the table. 
 Stay tuned!
 </p>
+<p>
+Development blog post #8:
+Be a Maker.
+
+
+</p>
+<p>
+Development blog post #9:
+The power of asking.
+
+</p>
+<p>
+Development blog post #10:
+Use the right tool for the job
+After a year of development work, and while working as a flat organization, there is one thing that readily apparent, which is this...
+Use the right tool for the job. 
+This is a very unusual stance to have, in a group, as the group as a whole, will go with what everyone knows. 
+However, as we have found out, the right tool for the job, is the one that comes readily apparent. 
+I remember watching a conference talk by Rob Pike, one of the authors of the Go language. 
+He stated that all programming languages are melting together, and becoming one, which is a bad idea. 
+In the group we have to work on designing Games, Mobile/Desktop Applications, and a series of web based projects. 
+
+There are two things that tend to drive our development process, the first is does the project already exist, odds are, it does, and there is an opensource version of it. 
+We make no exception, in using the open source version, whatever the license may be, and focus on the main idea of the group. 
+Reinventing the wheel is the biggest time killer in regards to a project. 
+	
+The innovation stems from where the ideas battle it out, and mix. 
+One of the projects we would like to do involves animal/environmental conservation, and if you don't have much of a budget, you get creative real fast.
+Were already in the start of the project, but we realized that that the least amount of resources we needed to design our hardware, would be the most efficient.
+Focusing on resource efficency threw out a lot of design choices. We needed to have something that allowed fast development, but also allowed us to use the least amount of energy.
+That threw out Python (the language that everyone knows) and R (the second language that everyone knows)
+So that narrowed it down to what we needed to do, either pay more for hardware, or have other  the developers work together
+using something that we don't know. 
+	
+in the end we used C. Since the majority of the Computer Science students, had to 
+learn C++ for their coursework, we realized something... C is really minimal, and that since at the end of the day, we were doing
+embedded systems programming, C was the right tool for the job. 
+Also, since we can run the C code on most any embedded system, we were able to scale up the amount of hardware devices, in our budget, without goingover on our price constraint.
+Another added benefit of the C language, is that most other programming language has a interface to ti, soo our Code could itself to the overall solution of what we working on. 
+It pays to know what the best tool for the job is.
+</p>
+<p>
+Design thinking: Community is all:
+
+
+
+</p>
 </body>
 </html>
